# ableton-bridge

./: .env  .gitignore  ADVERSARIAL_ANALYSIS.md  CHANGELOG.md  LICENSE  PLAN.md  PLAN_v2.md  README.md  installation_process.txt  pyproject.toml  requirements.txt
AbletonBridge_Remote_Script/: __init__.py
AbletonBridge_Remote_Script/handlers/: __init__.py  _helpers.py  browser.py  clips.py  devices.py  mixer.py  scenes.py  session.py  tracks.py
AbletonMCP_Remote_Script/: __init__.py
AbletonMCP_Remote_Script/handlers/: __init__.py  arrangement.py  audio.py  automation.py  clips.py  devices.py  midi.py  mixer.py  scenes.py  session.py  tracks.py
M4L_Device/: README.md  m4l_bridge.js
M4L_Device/Beta/: Devicev2.amxd  m4l_bridge.js
M4L_Device/Suite/: Devicev2.amxd  m4l_bridge.js
MCP_Server/: __init__.py  grid_notation.py  server.py
MCP_Server/connections/: m4l.py
elevenlabs_mcp/: __init__.py  __main__.py  convai.py  model.py  server.py  utils.py
